--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="./styles.css">
-        <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_TRACKING_ID"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4PTYMFHDT8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'YOUR_TRACKING_ID');
+  gtag('config', 'G-4PTYMFHDT8');
 </script>
 
         
