--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="./styles.css">
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4PTYMFHDT8"></script>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4PTYMFHDT8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'G-4PTYMFHDT8');
 </script>
 
