--- a/yes.html
+++ b/yes.html
@@ -2,6 +2,15 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="./yes_style.css">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4PTYMFHDT8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4PTYMFHDT8');
+</script>
         
     </head> 
     <body>
