--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,8 @@
     <head>
         <link rel="stylesheet" href="./yes_style.css">
         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4PTYMFHDT8"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?
+id=G-4PTYMFHDT8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
