--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <link rel="stylesheet" href="./styles.css">
         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?
-id=G-4PTYMFHDT8"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4PTYMFHDT8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
