--- a/yes.html
+++ b/yes.html
@@ -17,6 +17,7 @@
         <div class="container">
             <div >
                 <h1 class = "header_text">Hurrayyyy!!</h1>
+                <h1 class = "insta_id">My instagram is @paranj.amin.</h1>
             </div>
             <div class="gif_container">
                 <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
